--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    font-family: "Inter Tight", sans-serif;
+}
 .wb{
 border: 1px solid #27AE60;
 padding: 10px 18px;
@@ -16,4 +19,20 @@ border-radius: 5px;
 .wb i{
     color: #27AE60;
     font-size: 20px;
+}
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: white;
+}
+.text h1{
+font-weight: 700;
+}
+.text ul{
+ list-style: none;
+     padding-left: 0rem;
+}
+.text ul li i{
+    color: #0ACEFE;
 }
