--- a/media.css
+++ b/media.css
@@ -1,19 +1,67 @@
-@media only screen and (min-width:200px) and (max-width:575px){
-.btncover{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    justify-content: center!important;
-    margin-top: 5px;
-    margin-bottom: 5px;
+@media only screen and (min-width:200px) and (max-width:575px) {
+    .btncover {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        justify-content: center !important;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        background-color: white;
+    }
+
+    .text h1 {
+        font-weight: 600;
+        line-height: 38px !important;
+    }
+
+    .text ul {
+        list-style: none;
+        padding-left: 0rem;
+        line-height: 35px;
+
+    }
+
+    .text ul li i {
+        color: #0ACEFE;
+        padding-right: 23px;
+    }
+
+    .text .book {
+        background: linear-gradient(to right, #0ACEFE, #2699FB);
+        padding: 16px 48px;
+
+    }
+
+    .text .download {
+        border: 1px solid #D0D5DD;
+        padding: 16px 28px;
+    }
+
+    .text .register {
+        width: 100%;
+        padding: 10px 18px;
+        background: linear-gradient(to right, #0ACEFE, #2699FB);
+    }
+
+    .flow {
+        display: flex;
+        flex-direction: column !important;
+    }
 }
+
+@media only screen and (min-width:575px) and (max-width:768px) {
+    .cb {
+        padding: 5px !important;
+    }
+
+    .wb {
+        padding: 8px 15px !important;
+    }
 }
-@media only screen and (min-width:575px) and (max-width:768px){
-.cb{
-   padding: 5px !important;
-}
-.wb{
-    padding: 8px 15px !important;
-}
+@media only screen and (min-width:992px) and (max-width:1199px) {
+.flow {
+        display: flex;
+        flex-direction: column !important;
+    }
 }
