--- a/style.css
+++ b/style.css
@@ -28,12 +28,28 @@ header {
 }
 .text h1{
 font-weight: 700;
+line-height: 68px;
 }
 .text ul{
  list-style: none;
      padding-left: 0rem;
+     line-height: 35px;
+     
 }
 .text ul li i{
     color: #0ACEFE;
     padding-right: 23px;
+}
+.text .book{
+    background: linear-gradient(to right,#0ACEFE,#2699FB);
+    padding: 16px 48px;
+}
+.text .download{
+    border: 1px solid #D0D5DD;
+    padding: 16px 28px;
+}
+.text .register {
+    width: 100%;
+    padding: 10px 18px;
+    background: linear-gradient(to right,#0ACEFE,#2699FB);
 }
