--- a/style.css
+++ b/style.css
@@ -53,3 +53,9 @@ line-height: 68px;
     padding: 10px 18px;
     background: linear-gradient(to right,#0ACEFE,#2699FB);
 }
+.cole h1{
+    font-size: 30px;font-weight: 700;color: #2699FB;
+}
+.cole p{
+    font-size: 16px;font-weight: 400;color: #43505B;
+}
