--- a/style.css
+++ b/style.css
@@ -69,6 +69,6 @@ line-height: 68px;
 .p1{
      font-size: 15px;
     font-weight: 400;
-  line-height: 26px;
+  /* line-height: 26px; */
   color: #43505B;
 }
